# Auto_Screen_Switch

./: Cargo.toml  README.md  config.toml  install.bat  uninstall.bat
.github/workflows/: build.yml  release.yml
src/: autostart.rs  icon.rs  main.rs  screen.rs
